api for publishers to delete book
